--- a/config/Therzie.Monstrum.cfg
+++ b/config/Therzie.Monstrum.cfg
@@ -612,7 +612,7 @@ Biome = BlackForest
 # Setting type: SpawnArea
 # Default value: Everywhere
 # Acceptable values: Center, Edge, Everywhere
-Spawn area = Everywhere
+Spawn area = Center
 
 ## Configures the weather required for the creature to spawn.
 # Setting type: Weather
@@ -641,12 +641,12 @@ Hunt player = Off
 ## Configures the timespan that Valheim has to make the creature spawn.
 # Setting type: Int32
 # Default value: 800
-Maximum spawn interval = 800
+Maximum spawn interval = 1600
 
 ## Sets the chance for the creature to be spawned, every time Valheim checks the spawn.
 # Setting type: Single
 # Default value: 12
-Spawn chance = 12
+Spawn chance = 4
 
 ## If the creature can spawn in forests or cannot spawn in forests. Or both.
 # Setting type: Forest
@@ -726,7 +726,7 @@ Biome = None
 # Setting type: SpawnArea
 # Default value: Everywhere
 # Acceptable values: Center, Edge, Everywhere
-Spawn area = Everywhere
+Spawn area = Center
 
 ## Configures the weather required for the creature to spawn.
 # Setting type: Weather
@@ -1438,7 +1438,7 @@ Spawn altitude = 0.5
 # Setting type: Toggle
 # Default value: Off
 # Acceptable values: On, Off
-Can have stars = Off
+Can have stars = On
 
 ## Makes the creature immediately hunt down the player after it spawns.
 # Setting type: Toggle
@@ -1454,7 +1454,7 @@ Maximum spawn interval = 650
 ## Sets the chance for the creature to be spawned, every time Valheim checks the spawn.
 # Setting type: Single
 # Default value: 18
-Spawn chance = 18
+Spawn chance = 6
 
 ## If the creature can spawn in forests or cannot spawn in forests. Or both.
 # Setting type: Forest
