--- a/config/UnJohnny.Outsiders.cfg
+++ b/config/UnJohnny.Outsiders.cfg
@@ -140,7 +140,7 @@ Food items =
 # Setting type: SpawnOption
 # Default value: Default
 # Acceptable values: Disabled, Default, Custom
-Spawn = Default
+Spawn = Disabled
 
 ## Configures the time of day for the creature to spawn.
 # Setting type: SpawnTime
@@ -225,7 +225,7 @@ Forest condition = Both
 ## The maximum number of this creature near the player, before Valheim stops spawning it in. Setting this lower than the upper limit of the group size does not make sense.
 # Setting type: Int32
 # Default value: 2
-Maximum creature count = 2
+Maximum creature count = 1
 
 ## Configures the drops for the creature.
 # Setting type: DropOption
@@ -239,27 +239,7 @@ Drop config = FineWood:16-20:100:unrestricted:multiplyByLevel,BirchSeeds:1-3:100
 
 [item_Out_Fehu]
 
-Crafting Station = None
-
-Custom Crafting Station = 
-
-Crafting Station Level = 0
-
-Crafting Costs = Stone:30,Coins:200,Ruby:4
-
-[item_Out_Hagalaz]
-
-Crafting Station = None
-
-Custom Crafting Station = 
-
-Crafting Station Level = 0
-
-Crafting Costs = Stone:30,Out_VoidOrb:10,SurtlingCore:4
-
-[Rune of Fehu]
-
-## Crafting station where Rune of Fehu is available.
+## Crafting station where item_Out_Fehu is available.
 # Setting type: CraftingTable
 # Default value: None
 # Acceptable values: None, Workbench, Cauldron, Forge, ArtisanTable, StoneCutter, Custom
@@ -269,19 +249,19 @@ Crafting Station = None
 # Default value: 
 Custom Crafting Station = 
 
-## Required crafting station level to craft Rune of Fehu.
+## Required crafting station level to craft item_Out_Fehu.
 # Setting type: Int32
 # Default value: 0
 Crafting Station Level = 0
 
-## Item costs to craft Rune of Fehu
+## Item costs to craft item_Out_Fehu
 # Setting type: String
 # Default value: Stone:30,Coins:200,Ruby:4
 Crafting Costs = Stone:30,Coins:200,Ruby:4
 
-[Rune of Hagalaz]
+[item_Out_Hagalaz]
 
-## Crafting station where Rune of Hagalaz is available.
+## Crafting station where item_Out_Hagalaz is available.
 # Setting type: CraftingTable
 # Default value: None
 # Acceptable values: None, Workbench, Cauldron, Forge, ArtisanTable, StoneCutter, Custom
@@ -291,12 +271,12 @@ Crafting Station = None
 # Default value: 
 Custom Crafting Station = 
 
-## Required crafting station level to craft Rune of Hagalaz.
+## Required crafting station level to craft item_Out_Hagalaz.
 # Setting type: Int32
 # Default value: 0
 Crafting Station Level = 0
 
-## Item costs to craft Rune of Hagalaz
+## Item costs to craft item_Out_Hagalaz
 # Setting type: String
 # Default value: Stone:30,Out_VoidOrb:10,SurtlingCore:4
 Crafting Costs = Stone:30,Out_VoidOrb:10,SurtlingCore:4
