--- a/config/spawn_that.simple.cfg
+++ b/config/spawn_that.simple.cfg
@@ -588,3 +588,97 @@ GroupSizeMaxMultiplier = 1
 # Higher means more often. 2 is twice as often, 0.5 is double the time between spawn checks.
 SpawnFrequencyMultiplier = 1
 
+[FORESTSPIDER]
+# Prefab name of entity to modify.
+PrefabName = ForestSpider
+# Enable/Disable this set of modifiers.
+Enable = true
+# Change maximum of total spawned entities. 2 means twice as many.
+SpawnMaxMultiplier = 1
+# Change min number of entities that will spawn at once. 2 means twice as many.
+GroupSizeMinMultiplier = 1
+# Change max number of entities that will spawn at once. 2 means twice as many.
+GroupSizeMaxMultiplier = 1
+# Change how often the game will try to spawn in new creatures.
+# Higher means more often. 2 is twice as often, 0.5 is double the time between spawn checks.
+SpawnFrequencyMultiplier = 0.25
+
+[TREESPIDER]
+# Prefab name of entity to modify.
+PrefabName = TreeSpider
+# Enable/Disable this set of modifiers.
+Enable = true
+# Change maximum of total spawned entities. 2 means twice as many.
+SpawnMaxMultiplier = 1
+# Change min number of entities that will spawn at once. 2 means twice as many.
+GroupSizeMinMultiplier = 1
+# Change max number of entities that will spawn at once. 2 means twice as many.
+GroupSizeMaxMultiplier = 1
+# Change how often the game will try to spawn in new creatures.
+# Higher means more often. 2 is twice as often, 0.5 is double the time between spawn checks.
+SpawnFrequencyMultiplier = 0.25
+
+[FRIGIDSPIDER]
+# Prefab name of entity to modify.
+PrefabName = FrigidSpider
+# Enable/Disable this set of modifiers.
+Enable = true
+# Change maximum of total spawned entities. 2 means twice as many.
+SpawnMaxMultiplier = 1
+# Change min number of entities that will spawn at once. 2 means twice as many.
+GroupSizeMinMultiplier = 1
+# Change max number of entities that will spawn at once. 2 means twice as many.
+GroupSizeMaxMultiplier = 1
+# Change how often the game will try to spawn in new creatures.
+# Higher means more often. 2 is twice as often, 0.5 is double the time between spawn checks.
+SpawnFrequencyMultiplier = 0.25
+
+[FROSTSPIDER]
+# Prefab name of entity to modify.
+PrefabName = FrostSpider
+# Enable/Disable this set of modifiers.
+Enable = true
+# Change maximum of total spawned entities. 2 means twice as many.
+SpawnMaxMultiplier = 1
+# Change min number of entities that will spawn at once. 2 means twice as many.
+GroupSizeMinMultiplier = 1
+# Change max number of entities that will spawn at once. 2 means twice as many.
+GroupSizeMaxMultiplier = 1
+# Change how often the game will try to spawn in new creatures.
+# Higher means more often. 2 is twice as often, 0.5 is double the time between spawn checks.
+SpawnFrequencyMultiplier = 0.25
+
+[JUMPINGSPIDER]
+# Prefab name of entity to modify.
+PrefabName = GreenSpider
+# Enable/Disable this set of modifiers.
+Enable = true
+# Change maximum of total spawned entities. 2 means twice as many.
+SpawnMaxMultiplier = 1
+# Change min number of entities that will spawn at once. 2 means twice as many.
+GroupSizeMinMultiplier = 1
+# Change max number of entities that will spawn at once. 2 means twice as many.
+GroupSizeMaxMultiplier = 1
+# Change how often the game will try to spawn in new creatures.
+# Higher means more often. 2 is twice as often, 0.5 is double the time between spawn checks.
+SpawnFrequencyMultiplier = 0.25
+
+
+[TANSPIDER]
+# Prefab name of entity to modify.
+PrefabName = TanSpider
+# Enable/Disable this set of modifiers.
+Enable = true
+# Change maximum of total spawned entities. 2 means twice as many.
+SpawnMaxMultiplier = 1
+# Change min number of entities that will spawn at once. 2 means twice as many.
+GroupSizeMinMultiplier = 1
+# Change max number of entities that will spawn at once. 2 means twice as many.
+GroupSizeMaxMultiplier = 1
+# Change how often the game will try to spawn in new creatures.
+# Higher means more often. 2 is twice as often, 0.5 is double the time between spawn checks.
+SpawnFrequencyMultiplier = 0.25
+
+
+
+
