Mod Updates, Crafting Range increased, Outsiders spawn rates decreased.

--- a/config/com.kpro.TeleportEverything.cfg
+++ b/config/com.kpro.TeleportEverything.cfg
@@ -123,7 +123,7 @@ Transport Carts Mode = Enabled
 ## Take fee from cart prohibited items. [Synced with Server]
 # Setting type: Boolean
 # Default value: true
-Transport Carts Tax Items = true
+Transport Carts Tax Items = false
 
 [--- Transport Enemies ---]
 
@@ -166,7 +166,7 @@ Transport Ores = true
 # Setting type: Int32
 # Default value: 0
 # Acceptable value range: From 0 to 100
-Transport fee = 15
+Transport fee = 0
 
 ## Add the prefab names to remove fee from items on the server [Synced with Server]
 # Setting type: String
