vnei restriction and remove valharvest config

--- a/config/com.maxsch.valheim.vnei.cfg
+++ b/config/com.maxsch.valheim.vnei.cfg
@@ -23,7 +23,7 @@ Use Item Blacklist = true
 ## Hide unknown items and recipes.
 # Setting type: Boolean
 # Default value: false
-Show Only Known = false
+Show Only Known = true
 
 ## Forces to hide unknown items and recipes, overwriting ShowOnlyKnown if enabled. Synced with the server.
 # Setting type: Boolean
