--- a/config/horemvore.SupplyCrates.cfg
+++ b/config/horemvore.SupplyCrates.cfg
@@ -34,5 +34,5 @@ Enable = true
 ## Adds Valharvest's Apple, Salt and Vegetables to Provision Crate's.
 # Setting type: Boolean
 # Default value: false
-Enable = true
+Enable = false
 
